--- a/src/resources/views/edit_product.hbs
+++ b/src/resources/views/edit_product.hbs
@@ -22,13 +22,14 @@
                         </div>
                         <div class="form-group m-2">
                             <h3>Product Name</h3>
-                            <input type="text" class="form-control" id="input-name"  name="name"
-                                value="{{data.name}}" placeholder="" required>
+                            <input type="text" class="form-control" id="input-name" name="name" value="{{data.name}}"
+                                placeholder="" required>
                         </div>
                         <div class="form-group m-2">
                             <h3>Product description</h3>
-                            <textarea type="text" class="form-control" name="" id="" cols="30" rows="5"
-                                value="{{data.description}}" name="description" required></textarea>
+
+                            <textarea type="text" class="form-control"  id="" cols="30" rows="5"
+                                value="{{data.description}}" name="description" required>{{data.description}}</textarea>
                         </div>
 
                         <div class="row m-0">
