--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -1,125 +1,161 @@
 <html>
 
-  <head>
-    <meta charset="utf-8" />
-    <title>Example App</title>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css" />
-    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
+<head>
+  <meta charset="utf-8" />
+  <title>Example App</title>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
 
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
-    {{! <title>Document</title> }}
-    <script src="/js/script.js"></script>
-    <style>
-      @media only screen and (max-width: 767px) { table
-      td:nth-of-type(1)::before { content: "ID"; margin: 0; margin-bottom: 5px;
-      margin-right: 50px; } table td:nth-of-type(2)::before { content: "Image";
-      } table td:nth-of-type(3)::before { content: "Name"; } table
-      td:nth-of-type(4)::before { content: "Price"; } table
-      td:nth-of-type(5)::before { content: "Quantity"; } table
-      td:nth-of-type(6)::before { content: "Action"; } }
-    </style>
-  </head>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous" />
+  {{! <title>Document</title> }}
+  <script src="/js/script.js"></script>
+  <style>
+    @media only screen and (max-width: 767px) {
+      table td:nth-of-type(1)::before {
+        content: "ID";
+        margin: 0;
+        margin-bottom: 5px;
+        margin-right: 50px;
+      }
 
-  <body>
+      table td:nth-of-type(2)::before {
+        content: "Image";
+      }
 
-    <header>
-      <input type="checkbox" id="check" name="check" />
-      {{#if loggedIn}}
-        <nav class="container d-none">
-          <ul class="left">
-            <li><a href="/vendor/register">Become our vendor</a></li>
-            <li><a href="/customer/register">Become our customers</a></li>
-            <li><a href="/shipper/register">Become our delivery boys</a></li>
-          </ul>
-          <ul class="right">
-            <li><a href="/login">Log in</a></li>
-            <li><a href="/customer/register">Sign up</a></li>
-          </ul>
-        </nav>
-      {{else}}
-        <nav class="container">
-          <ul class="left">
-            <li><a href="/vendor/register">Become our vendor</a></li>
-            <li><a href="/customer/register">Become our customers</a></li>
-            <li><a href="/shipper/register">Become our delivery boys</a></li>
-          </ul>
-          <ul class="right">
-            <li><a href="/login">Log in</a></li>
-            <li><a href="/customer/register">Sign up</a></li>
-          </ul>
-        </nav>
-      {{/if}}
-      <label for="check" class="checkbtn"><i class="fa fa-bars"></i></label>
+      table td:nth-of-type(3)::before {
+        content: "Name";
+      }
 
-      <div class="subnav container mb-0">
-        <div class="logo">
-          <a href="/">
-            <b>SIMPLE</b>
+      table td:nth-of-type(4)::before {
+        content: "Price";
+      }
+
+      table td:nth-of-type(5)::before {
+        content: "Quantity";
+      }
+
+      table td:nth-of-type(6)::before {
+        content: "Action";
+      }
+    }
+  </style>
+</head>
+
+<body>
+
+  <header>
+    <input type="checkbox" id="check" name="check" />
+    {{#if loggedIn}}
+    <nav class="container d-none">
+      <ul class="left">
+        <li><a href="/vendor/register">Become our vendor</a></li>
+        <li><a href="/customer/register">Become our customers</a></li>
+        <li><a href="/shipper/register">Become our delivery boys</a></li>
+      </ul>
+      <ul class="right">
+        <li><a href="/login">Log in</a></li>
+        <li><a href="/customer/register">Sign up</a></li>
+      </ul>
+    </nav>
+    {{else}}
+    <nav class="container">
+      <ul class="left">
+        <li><a href="/vendor/register">Become our vendor</a></li>
+        <li><a href="/customer/register">Become our customers</a></li>
+        <li><a href="/shipper/register">Become our delivery boys</a></li>
+      </ul>
+      <ul class="right">
+        <li><a href="/login">Log in</a></li>
+        <li><a href="/customer/register">Sign up</a></li>
+      </ul>
+    </nav>
+    {{/if}}
+    <label for="check" class="checkbtn"><i class="fa fa-bars"></i></label>
+
+    <div class="subnav container mb-0">
+      <div class="logo">
+
+        <a href="/">
+          <b>SIMPLE</b>
+        </a>
+      </div>
+      <div class="nav-right">
+        <div class="search">
+          <form method="GET" action="/products/v1/search">
+            <input type="text" id="search" name="query" placeholder="search something here" />
+            <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
+
+        </div>
+        <div class="icons">
+          <a href="/products/orders">
+            <div class="cart-icon">
+              <i class="fa fa-shopping-cart"></i>
+              <span class="cart-count">0</span>
+            </div>
           </a>
+          <a href="#"><i class="fa fa-user"></i></a>
         </div>
-        <div class="nav-right">
-          <div class="search">
-            <form method="GET" action="/products/v1/search">
-              <input
-                type="text"
-                id="search"
-                name="query"
-                placeholder="search something here"
-              />
-              <button type="submit"><i class="fa fa-search"></i></button>
-            </form>
-
-          </div>
-          <div class="icons">
-            <a href="/products/orders"><i class="fa fa-shopping-cart"></i></a>
-            <a href="/info"><i class="fa fa-user"></i></a>
-          </div>
-          <a href="#" class="menu-toggle"><i class="fa fa-bars"></i></a>
-        </div>
+        <a href="#" class="menu-toggle"><i class="fa fa-bars"></i></a>
       </div>
-    </header>
-    {{{body}}}
+    </div>
+    <script>
+      // Update the item count function
+      function updateItemCount() {
+        var cartItems = JSON.parse(localStorage.getItem('cart')) || [];
+        var itemCount = cartItems.length;
 
-    <footer>
-      <div class="container pt-4">
-        <div style="display:flex; justify-content: center; text-align: center;">
-          <p>
-            Buy everything you need, even for your kids, it’s all meet your
-            needs
-          </p>
-        </div>
-        <div class="ft-link">
-          <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Copyrights</a></li>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Helps</a></li>
-          </ul>
-        </div>
-        <div style="display:flex; justify-content: center; text-align: center;">
-          <p>Copyright © 2023 . RMIT University . All Rights Reserved</p>
-        </div>
+        // Update the cart count in the DOM
+        var cartCountElement = document.querySelector('.cart-count');
+        cartCountElement.textContent = itemCount;
+      }
+
+      // Call the updateItemCount function initially
+      updateItemCount();
+
+      // Listen for the storage event to trigger the update
+      window.addEventListener('storage', function (event) {
+        // Check if the storage event was triggered by changes to the cart data
+        if (event.key === 'cart') {
+          updateItemCount();
+        }
+      });
+
+    </script>
+  </header>
+  {{{body}}}
+
+  <footer>
+    <div class="container pt-4">
+      <div style="display:flex; justify-content: center; text-align: center;">
+        <p>
+          Buy everything you need, even for your kids, it’s all meet your
+          needs
+        </p>
       </div>
-    </footer>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+      <div class="ft-link">
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Copyrights</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Helps</a></li>
+        </ul>
+      </div>
+      <div style="display:flex; justify-content: center; text-align: center;">
+        <p>Copyright © 2023 . RMIT University . All Rights Reserved</p>
+      </div>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
 
-  </body>
+</body>
 
 </html>
