--- a/src/resources/views/search.hbs
+++ b/src/resources/views/search.hbs
@@ -59,7 +59,7 @@
     </div>
     {{#ifCond @index "%" 6}}
 </div>
-<div class="daily-discover row">
+<div class="daily-discover row" style="width: 100%;">
     {{/ifCond}}
   {{/each}}
 </div>
