--- a/src/resources/views/Product.hbs
+++ b/src/resources/views/Product.hbs
@@ -28,7 +28,7 @@
     <div class="daily">
       <h2 class=" mb-2">Daily Discover</h2>
     </div>
- <div class="daily-discover row">
+ <div class="daily-discover row" style="width: 100%;">
   {{#each products}}
     <div class="col-lg-2 mt-4">
       <div class="card">
@@ -43,7 +43,7 @@
     </div>
     {{#ifCond @index "%" 6}}
 </div>
-<div class="daily-discover row">
+<div class="daily-discover row" style="width: 100%;">
     {{/ifCond}}
   {{/each}}
 </div>
